bitfield/tests/09-variant-out-of-range.stderr
error[E0080]: evaluation of constant value failed
 --> tests/09-variant-out-of-range.rs:8:10
  |
8 | #[derive(BitfieldSpecifier)]
  |          ^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'DeliveryMode::External discriminant value out of range, expect range [0,8)', $DIR/tests/09-variant-out-of-range.rs:8:10
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
